# forkitech_test

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: db.py  deps.py  main.py  models.py  repository.py  schema.py  service.py  settings.py  tool.py
app/tests/: conftest.py  test_add_adress.py  test_api.py
